--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ body{
 }
 
 .task_container .input_box textarea {
-    width: 100%;
+    width: 95%;
     height: 2rem;
-    max-width: 25rem;
+    /* max-width: 25rem; */
     margin-bottom: 1rem;
     padding-left: 1rem;
     padding-top: 1rem;
@@ -55,7 +55,8 @@ body{
     background-color: rgba(126, 113, 80, 0.852);
     border: none;
     color: white;
-
+    border-radius: 0.2rem;
+    margin-right:1rem;
 }
 
 #task_btn{
